@@ -6,4 +6,4 @@ export(abc_optim)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,runif)
 importFrom(utils,str)
-useDynLib(ABCoptim)
+useDynLib(ABCoptim, .registration = TRUE)
