@@ -1,3 +1,8 @@
+2017-08-25  George G. Vega Yon (g.vegayon@gmail.com)
+	* R/abc_optim.R: Added a new example + improve print method.
+	* R/ABCoptim-package.R: Added .registration=TRUE.
+
+
 2017-01-18  George G. Vega Yon (g.vegayon@gmail.com)
 	* R/abc_optim.R: Added fnscale and parscale.
 
